--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!--
 
     The MIT License
-    Copyright (c) 2016 Josep McCarthy
+    Copyright (c) 2016 Joseph McCarthy
 
     Permission is hereby granted, free of charge, to any person obtaining a copy
     of this software and associated documentation files (the "Software"), to deal
@@ -49,7 +49,6 @@
             <artifactId>okhttp</artifactId>
             <version>3.4.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
@@ -70,15 +69,21 @@
         </dependency>
     </dependencies>
 
+
+
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacocoplugin.version}</version>
                 <executions>
                     <execution>
-                        <updatePeriod>pre-unit-test</updatePeriod>
+                        <id>pre-unit-test</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -88,7 +93,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <updatePeriod>post-unit-test</updatePeriod>
+                        <id>post-unit-test</id>
                         <phase>test</phase>
                         <goals>
                             <goal>report</goal>
@@ -99,7 +104,7 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <updatePeriod>default-report</updatePeriod>
+                        <id>default-report</id>
                         <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
@@ -127,13 +132,13 @@
                 <configuration>
                     <header>com/mycila/maven/plugin/license/templates/MIT.txt</header>
                     <properties>
-                        <owner>Josep McCarthy</owner>
+                        <owner>Joseph McCarthy</owner>
                         <skipExistingHeaders>false</skipExistingHeaders>
                     </properties>
                 </configuration>
                 <executions>
                     <execution>
-                        <updatePeriod>install-format</updatePeriod>
+                        <id>install-format</id>
                         <phase>install</phase>
                         <goals>
                             <goal>format</goal>
@@ -141,28 +146,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.17</version>
-                <executions>
-                    <execution>
-                        <updatePeriod>validate</updatePeriod>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <phase>validate</phase>
-                        <configuration>
-                            <configLocation>checkstyle.xml</configLocation>
-                            <encoding>UTF-8</encoding>
-                            <consoleOutput>true</consoleOutput>
-                            <failsOnError>true</failsOnError>
-                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
         </plugins>
     </build>
 </project>
